--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -1,51 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="mainViewModel"
+            type="com.example.yourpizza.viewmodels.MainViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <View
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="70dp"
+            android:background="@color/black"
             android:drawableLeft="@drawable/back_button"
-            android:background="@color/black"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/back_button"
-            app:layout_constraintTop_toTopOf="@id/toolbar"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="@id/toolbar"
-            android:layout_marginStart="10dp"
-            />
+            app:layout_constraintTop_toTopOf="@id/toolbar" />
 
         <TextView
             android:id="@+id/heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:text="CHOOSE YOUR PIZZA"
             android:textColor="#F9FBFC"
             android:textSize="15dp"
-            app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
-            app:layout_constraintTop_toTopOf="@id/toolbar"
-            android:layout_marginStart="10dp"
-            />
+            app:layout_constraintStart_toEndOf="@id/back_button"
+            app:layout_constraintTop_toTopOf="@id/toolbar" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/pizza_recycler"
+        <Button
+            android:id="@+id/navigate_to_cart_button"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_gravity="end"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/bg_cart_button"
+            android:drawableStart="@drawable/cart_icon"
+            android:onClick="@{()->mainViewModel.navigateToMyCartFragment()}"
+            android:text="@{mainViewModel.totalPizzaCount + @string/pizza}"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/toolbar" />
+
+
+        <TextView
+            android:id="@+id/pizza_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@{ mainViewModel.pizzaResponseLiveData.isVeg ? @drawable/green_circle : @drawable/red_circle }"
+            android:scaleType="fitCenter"
+            android:src="@drawable/default_image"
+            android:text="@{mainViewModel.pizzaResponseLiveData.name}"
+            android:textColor="@color/black"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/pizza_descrip"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <TextView
+            android:id="@+id/pizza_descrip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{mainViewModel.pizzaResponseLiveData.description}"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_marginTop="30sp"
+            android:layout_marginStart="15sp"
+            android:layout_marginEnd="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/crust_name"
+            app:layout_constraintEnd_toStartOf="@id/guideline3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@id/guideline2"
+            app:layout_constraintTop_toBottomOf="@id/pizza_name"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+
+        <TextView
+            android:id="@+id/crust_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30sp"
+            android:backgroundTint="#acacac"
+            android:text="@{mainViewModel.pizzaResponseLiveData.crusts[mainViewModel.pizzaResponseLiveData.defaultCrust-1].name}"
+            android:textColor="@color/black"
+            android:textSize="35sp"
+            app:layout_constraintBottom_toTopOf="@+id/size_name"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/pizza_descrip" />
+
+
+        <TextView
+            android:id="@+id/size_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30sp"
+            android:layout_weight="0.5"
+            android:backgroundTint="#acacac"
+            android:inputType="numberDecimal"
+            android:maxLength="18"
+            android:text="@{mainViewModel.pizzaResponseLiveData.crusts[mainViewModel.pizzaResponseLiveData.defaultCrust-1].sizes[(mainViewModel.pizzaResponseLiveData.crusts[mainViewModel.pizzaResponseLiveData.defaultCrust-1].defaultSize)-1].name}"
+            android:textColor="#5a5a5a"
+            android:textSize="35sp"
+            app:layout_constraintBottom_toTopOf="@id/add_cart_button"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/crust_name" />
+
+        <Button
+            android:id="@+id/add_cart_button"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:text="ADD TO CART"
+            android:onClick="@{()->mainViewModel.openCrustSelector()}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="51sp" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="51sp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
