--- a/app/src/main/res/drawable-anydpi/green_circle.xml
+++ b/app/src/main/res/drawable-anydpi/green_circle.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="24"
     android:tint="#1EF506"
     android:alpha="0.8">
-  <group android:scaleX="0.75"
-      android:scaleY="0.75"
-      android:translateX="3"
-      android:translateY="3">
+  <group android:scaleX="1.0909091"
+      android:scaleY="1.0909091"
+      android:translateX="-1.0909091"
+      android:translateY="-1.0909091">
     <path
         android:fillColor="@android:color/white"
         android:pathData="M12,2C6.47,2 2,6.47 2,12s4.47,10 10,10 10,-4.47 10,-10S17.53,2 12,2z"/>
