--- a/app/src/main/res/layout/crusts_selector_dialog.xml
+++ b/app/src/main/res/layout/crusts_selector_dialog.xml
@@ -19,15 +19,16 @@
             android:layout_height="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:drawableLeft="@drawable/back_button"
+            android:drawableStart="@drawable/back_button"
             android:background="@color/black"/>
 
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="20sp"
-            android:layout_height="20sp"
+            android:layout_width="25sp"
+            android:layout_height="25sp"
             android:src="@drawable/back_button"
+            android:onClick="@{()->viewModel.closeCrustDialog()}"
             app:layout_constraintTop_toTopOf="@id/toolbar"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="@id/toolbar"
@@ -38,9 +39,10 @@
             android:id="@+id/heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CHOOSE CRUSTS"
-            android:textColor="#F9FBFC"
-            android:textSize="15dp"
+            android:text="@string/choose_crust"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintTop_toTopOf="@id/toolbar"
@@ -55,7 +57,6 @@
             android:layout_gravity="end"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="5dp"
-            android:drawableStart="@drawable/rupee_image"
             android:background="@drawable/bg_cart_button"
             android:text="@{viewModel.currentPrice.price + @string/empty}"
             android:textSize="17sp"
@@ -64,26 +65,29 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintTop_toTopOf="@id/toolbar"
-            android:visibility="visible" />
+            android:visibility="visible"
+            app:drawableStartCompat="@drawable/rupee_image" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/crust_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:maxHeight="300sp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
         <TextView
             android:id="@+id/done"
             android:layout_width="match_parent"
-            android:layout_height="40sp"
+            android:layout_height="50sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/black"
-            android:text="DONE"
+            android:text="@string/add_to_cart"
+            android:onClick="@{()-> viewModel.setTotalPizzaCounts()}"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:paddingTop="10sp"
+            android:paddingTop="15sp"
             app:layout_constraintTop_toBottomOf="@id/crust_recyclerView"/>
 
 
