--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -7,6 +7,10 @@
         <variable
             name="mainViewModel"
             type="com.example.yourpizza.viewmodels.MainViewModel" />
+
+        <variable
+            name="view"
+            type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,17 +23,18 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="@color/black"
-            android:drawableLeft="@drawable/back_button"
+            android:drawableStart="@drawable/back_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="20sp"
-            android:layout_height="20sp"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
             android:layout_marginStart="10dp"
             android:src="@drawable/back_button"
+            android:onClick="@{()->mainViewModel.onBackPressed()}"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="@id/toolbar"
             app:layout_constraintTop_toTopOf="@id/toolbar" />
@@ -39,9 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="CHOOSE YOUR PIZZA"
-            android:textColor="#F9FBFC"
-            android:textSize="15dp"
+            android:text="@string/pizza_all_over"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintTop_toTopOf="@id/toolbar" />
@@ -55,6 +60,7 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/bg_cart_button"
             android:drawableStart="@drawable/cart_icon"
+            android:enabled="@{mainViewModel.isEnable()?true:false}"
             android:onClick="@{()->mainViewModel.navigateToMyCartFragment()}"
             android:text="@{mainViewModel.totalPizzaCount + @string/pizza}"
             android:textAllCaps="false"
@@ -64,12 +70,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/toolbar" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/pizza_name"
+            app:layout_constraintBottom_toBottomOf="@id/pizza_name"
+            android:visibility="@{mainViewModel.isEnable()? view.VISIBLE : view.GONE}"
+            android:src="@{ mainViewModel.pizzaResponseLiveData.isVeg ? @drawable/green_circle : @drawable/red_circle }"
+            app:layout_constraintEnd_toStartOf="@id/pizza_name"
+            android:layout_marginEnd="15sp"/>
+
 
         <TextView
             android:id="@+id/pizza_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@{ mainViewModel.pizzaResponseLiveData.isVeg ? @drawable/green_circle : @drawable/red_circle }"
             android:scaleType="fitCenter"
             android:text="@{mainViewModel.pizzaResponseLiveData.name}"
             android:textColor="@color/black"
@@ -84,7 +99,7 @@
 
         <TextView
             android:id="@+id/pizza_descrip"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{mainViewModel.pizzaResponseLiveData.description}"
             android:textColor="@color/black"
@@ -122,11 +137,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30sp"
             android:layout_weight="0.5"
-            android:backgroundTint="#acacac"
-            android:inputType="numberDecimal"
             android:maxLength="18"
             android:text="@{mainViewModel.pizzaResponseLiveData.crusts[mainViewModel.pizzaResponseLiveData.defaultCrust-1].sizes[(mainViewModel.pizzaResponseLiveData.crusts[mainViewModel.pizzaResponseLiveData.defaultCrust-1].defaultSize)-1].name}"
-            android:textColor="#5a5a5a"
+            android:textColor="@color/black"
             android:textSize="35sp"
             app:layout_constraintBottom_toTopOf="@id/add_cart_button"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -139,7 +152,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
-            android:text="ADD TO CART"
+            android:enabled="@{mainViewModel.isEnable()?true:false}"
+            android:text="@string/get_customized_piiza"
             android:onClick="@{()->mainViewModel.openCrustSelector()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -157,6 +171,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_end="51sp" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="45sp"
+            android:layout_height="45sp"
+            android:backgroundTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
