--- a/app/src/main/res/layout/my_cart_fragment.xml
+++ b/app/src/main/res/layout/my_cart_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -8,10 +9,11 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="match_parent">
+
+        android:layout_height="match_parent"
+        >
 
         <View
             android:id="@+id/toolbar"
@@ -19,15 +21,16 @@
             android:layout_height="70dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:drawableLeft="@drawable/back_button"
+            android:drawableStart="@drawable/back_button"
             android:background="@color/black"/>
 
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="20sp"
-            android:layout_height="20sp"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
             android:src="@drawable/back_button"
+            android:onClick="@{()-> viewModel.onBackPressed()}"
             app:layout_constraintTop_toTopOf="@id/toolbar"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="@id/toolbar"
@@ -39,8 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{@string/total_cost + viewModel.totalCost}"
-            android:textColor="#F9FBFC"
-            android:textSize="17dp"
+            android:textColor="@color/white"
+            android:textSize="17sp"
             android:textStyle="bold"
             android:layout_marginEnd="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,9 +56,9 @@
             android:id="@+id/heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="YOUR CART"
-            android:textColor="#F9FBFC"
-            android:textSize="15dp"
+            android:text="@string/your_cart"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintTop_toTopOf="@id/toolbar"
