--- a/app/src/main/res/layout/size_selector_dialog.xml
+++ b/app/src/main/res/layout/size_selector_dialog.xml
@@ -2,12 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.example.yourpizza.viewmodels.MainViewModel" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:background="@color/white"
@@ -19,7 +13,7 @@
             android:layout_height="70dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:drawableLeft="@drawable/back_button"
+            android:drawableStart="@drawable/back_button"
             android:background="@color/black"/>
 
 
@@ -27,12 +21,11 @@
             android:id="@+id/heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CHOOSE SIZE"
-            android:textColor="#F9FBFC"
-            android:textSize="15dp"
+            android:text="@string/choose_size"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@id/toolbar"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toStartOf="@+id/toolbar"
             app:layout_constraintTop_toTopOf="@id/toolbar" />
 
@@ -42,6 +35,7 @@
             android:id="@+id/size_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:maxHeight="200sp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
 
