--- a/app/src/main/res/layout/my_cart_fragment.xml
+++ b/app/src/main/res/layout/my_cart_fragment.xml
@@ -70,7 +70,9 @@
             android:id="@+id/cart_recycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
